--- a/05-Programming.Rmd
+++ b/05-Programming.Rmd
@@ -2,30 +2,62 @@
 
 Your work goes here ...
 
-```{r}
+
 #Task 1
+```{r}
 library("mosaicData", lib.loc = "~/R/library")
 nbins <- 10
-
+```
 #Task 2
+```{r}
 evenly_spaced <- seq(min(Galton$height),max(Galton$height), 
-                     length = nbins + 1)
-#SEND HELP
-
-#Task 3
-bin_counts <- cut(Galton$height, evenly_spaced)
-bin_counts <- table(bin_counts)
+                    length = nbins + 1)
 ```
 
+#Task 3
 ```{r}
-hist_basics <- data.frame(xL = evenly_spaced[-length(evenly_spaced)],
-                          xR = evenly_spaced[-1], 
+bin_counts <- table(cut(Galton$height, evenly_spaced))
+```
+
+#Task 4
+```{r}
+hist_basics <- data.frame(xL = evenly_spaced[1:1-length(evenly_spaced)],
+                          xR = evenly_spaced[2:length(evenly_spaced)], 
                           count = as.numeric(bin_counts))
 
 hist_basics
 ```
 
+#Task 5
+```{r}
+make_one_bar <- function(point) {
+  xLeft <- point$xL
+  xRight <- point$xR
+  height <- point$count
+  res <- data.frame(
+              x = c(xLeft,  xLeft,  xRight, xRight, NA),
+              y = c(    0, height,  height,      0, NA)
+  )
+  res
+}
 
+one_to_five <- function(hist_data) {
+  bars <- NULL
+  for (k in 1:nrow(hist_data)) {
+    new_bar <- make_one_bar(hist_data[k, ])
+    bars <- rbind(bars, new_bar)
+  }
+  bars
+}
+```
+
+#Task 6
+```{r}
+My_bars <- one_to_five(hist_basics)
+plot(My_bars, type = "n")
+lines(My_bars)
+polygon(My_bars)
+```
 ## Test statements
 
 ```{r}
