--- a/06-Programming.Rmd
+++ b/06-Programming.Rmd
@@ -2,7 +2,49 @@
 
 Your work goes here ...
 
+#Task 1
+```{r}
+myHistogram <- function(fill = "green") {
+library("mosaicData", lib.loc = "~/R/library")
+nbins <- 10
+evenly_spaced <- seq(min(Galton$height),max(Galton$height), 
+                    length = nbins + 1)
+bin_counts <- table(cut(Galton$height, evenly_spaced))
+hist_basics <- data.frame(xL = evenly_spaced[1:1-length(evenly_spaced)],
+                          xR = evenly_spaced[2:length(evenly_spaced)], 
+                          count = as.numeric(bin_counts))
+My_bars <- one_to_five(hist_basics)
+plot(My_bars, type = "n")
+lines(My_bars)
+polygon(My_bars, col = fill)
+plot(dnorm(Galton$height, mean(Galton$height), sd(Galton$height)), col = "red")
+}
+```
 
+#Task 2
+```{r}
+v <- rnorm(10, mean = 100, sd = 1)
+bandwidth <- range(v)/sqrt(100)
+kernel <- function(x,v){
+  x/length(x) * bandwidth
+}
+x <- rnorm(10, mean = 100, sd = 3)
+Dvals <- outer(v, x, FUN = kernel)
+density <- colSums(Dvals)/length(v)
+data <- data.frame(x, density)
+plot(data)
+```
+```{r}
+plotdensity <- function(v){
+  bandwidth <- range(v)/sqrt(100)
+  x1 <- rnorm(length(v), mean = mean(v), sd = sd(v) * 3)
+  kernel1 <- x/length(x) * bandwidth
+  Dvals1 <- outer(v, x, FUN = kernel)
+density1 <- colSums(Dvals1)/length(v)
+data1 <- data.frame(x, density)
+plot(data1, xlim = NULL)
+}
+```
 
 ## Test statements
 
