--- a/17-Programming.Rmd
+++ b/17-Programming.Rmd
@@ -1,11 +1,47 @@
 # In-Class Programming Activity, Day 17
 
 Your work goes here ...
-
-
-
-## Test statements
+```{r}
+Cartoon_data <- data.frame(
+  x = 1:8,
+  y = c(2,5,1,3,8,5,4,6),
+  class = c("A", "B", "A", "A", "B", "B", "A", "B")
+)
+```
 
 ```{r}
-scoreActivity::score253(17)
+library(tree)
+pure <- tree.control(8, mincut = 0, minsize = 1, mindev = 0)
 ```
+
+```{r}
+rtree_pure <- tree(y ~ x, data = Cartoon_data, control = pure)
+plot(rtree_pure)
+text(rtree_pure)
+```
+```{r}
+ctree_pure <- tree(class ~ x, data = Cartoon_data, control = pure)
+plot(ctree_pure)
+text(ctree_pure)
+```
+```{r}
+predict(rtree_pure)
+predict(ctree_pure)
+predict(rtree_pure, newdata = data.frame(x = 3))
+predict(ctree_pure, newdata = data.frame(x = 7))
+```
+```{r}
+rtree_5 <- prune.tree(rtree_pure, best = 5)
+ctree_2 <- prune.tree(ctree_pure, best = 2)
+```
+
+```{r}
+library(mosaicData)
+pure_for_cps <- tree.control(nrow(CPS85), mincut = 0, minsize = 1, mindev = 0)
+Sector_classifier <- tree(sector ~ wage + sex + educ + exper, data = CPS85, control = pure_for_cps)
+Sector_classifier_20 <- prune.tree(Sector_classifier, best = 20)
+plot(Sector_classifier_20)
+text(Sector_classifier_20)
+```
+
+## Test statements
