--- a/Lending Club (Continued).Rmd
+++ b/Lending Club (Continued).Rmd
@@ -1,7 +1,27 @@
+
 #Lending Club (Continued)
 
+#Data Cleaning
 ```{r}
 load("Loans.rda")
+Loans$id <- NULL
+Loans$member_id <- NULL
+Loans$emp_title <- NULL
+Loans$emp_length <- NULL
+Loans$issue_d <- NULL
+Loans$url <- NULL
+Loans$des <- NULL
+Loans$purpose <- NULL
+Loans$title <- NULL
+Loans$zip_code <- NULL
+Loans$delinq_2yrs <- NULL
+Loans$policy_code <- NULL
+Loans$desc <- NULL
+Loans$earliest_cr_line <- NULL
+Loans$last_pymnt_d <- NULL
+Loans$next_pymnt_d <- NULL
+Loans$last_credit_pull_d <- NULL
+Loans$application_type <- NULL
 ```
 
 #Graphical Representations
@@ -11,17 +31,56 @@ hist(Loans$int_rate)
 boxplot(int_rate ~ grade, data = Loans, main = "Loan Interest Rate Based on Loan Grade")
 ```
 
-#Total Amount of Loans in Each Status Type
+
 ```{r}
-table(Loans$loan_status)
+loan_sample <- data.frame(Loans)
 ```
 
 ```{r}
-keepers <- Loans %in% c("Charged Off", "Fully Paid", "Current")
+keepers <- loan_sample$loan_status %in% c("Charged Off", "Fully Paid")
 ```
 
 ```{r}
-data_for_modeling <- Loans_100k[keepers,]
+data_for_modeling <- loan_sample[keepers, ]
+```
+
+```{r}
+data_for_modeling$loan_status[data_for_modeling$loan_status == "Charged Off"] <- as.numeric(0)
+data_for_modeling$loan_status[data_for_modeling$loan_status == "Fully Paid"] <- as.numeric(1)
 table(data_for_modeling$loan_status)
+```
+
+
+#Formulas
+```{r}
+formula1 <- as.numeric(loan_status) ~ annual_inc + int_rate + grade + out_prncp
+formula2 <- as.numeric(loan_status) ~ loan_amnt + int_rate + grade + annual_inc + total_pymnt
+formula3 <- as.numeric(loan_status) ~ loan_amnt + int_rate + grade + annual_inc + total_pymnt + sub_grade + funded_amnt_inv + verification_status + dti + open_acc + revol_bal
+```
+
+#Testing and Training Data
+```{r}
+train <- 1:(nrow(data_for_modeling) / 2)
+training_data <- data_for_modeling[train,]
+testing_data <- data_for_modeling[-train,]
+```
+
+#Models
+```{r}
+glm_fit <- glm(formula3,data = training_data, family = binomial)
+glm_test <- predict(glm_fit, testing_data, type = "response")
+```
+
+```{r}
+table(testing_data$loan_status, glm_test > .7)
+```
+
+```{r}
+test_error_rate <- sum(4100, 742) / sum(21413, 742, 4100, 100231)
+specificity <- 21413 / sum(21413, 742)
+sensitivity <- 100231 / sum(4100, 100231)
+test_error_rate
+specificity
+sensitivity
 ```
 
