--- a/Lending Club 10 K Cros Validation.Rmd
+++ b/Lending Club 10 K Cros Validation.Rmd
@@ -1,4 +1,9 @@
+#A.J. Imholte
+#K-fold Cross Validation on Logistic Regression
+#Lending Club Project
+
 ```{r}
+load("C:/Users/Aaron/Downloads/Loans.rda")
 loan_sample <- data.frame(Loans)
 ```
 
@@ -15,7 +20,9 @@ folds <- cut(seq(1,nrow(data_for_modeling)),breaks=10,labels=FALSE)
 formula3 <- as.numeric(loan_status) ~ loan_amnt + int_rate + grade + annual_inc + total_pymnt + sub_grade + funded_amnt_inv + verification_status + dti + open_acc + revol_bal
 ```
 
+#10-k Fold Cross Validation on Logistic Regression Model
 ```{r}
+set.seed(10)
 for(i in 1:10){
     testIndexes <- which(folds==i,arr.ind=TRUE)
     testData <- data_for_modeling[testIndexes, ]
@@ -25,47 +32,63 @@ for(i in 1:10){
     print(table(testData$loan_status, glm_test > .7))
 }
 ```
+
 ```{r}
-spec1 <- 4177/sum(318, 4177)
-spec2 <- 4294/sum(330, 4294)
-spec3 <- 4155/sum(4155,306)
-spec4 <- 4172/sum(4172,315)
-spec5 <- 4261/sum(4261, 329)
-spec6 <- 4223/sum(4223,325)
-spec7 <- 4134/sum(4134,343)
-spec8 <- 4219/sum(4219,315)
-spec9 <- 4223/sum(4223,321)
-spec10 <- 4191/sum(4191,297)
+spec1 <- 4287/sum(4287,282)
+spec2 <- 4267/sum(4267,313)
+spec3 <- 4197/sum(4197,308)
+spec4 <- 4196/sum(4196,362)
+spec5 <- 4124/sum(4124,306)
+spec6 <- 4207/sum(4207,319)
+spec7 <- 4191/sum(4191,306)
+spec8 <- 4104/sum(4104,336)
+spec9 <- 4233/sum(4233,348)
+spec10 <- 4235/sum(4235,327)
 spec.cv <- mean(spec1, spec2, spec3, spec4, spec5, spec6, spec7, spec8, spec8, 
                 spec10)
+```
+
+#10-k Fold Cross-Validated Specificity
+```{r}
 spec.cv
 ```
+
 ```{r}
-sens1 <- 20722/sum(81,20722)
-sens2 <- 20606/sum(67,20606)
-sens3 <- 20773/sum(63,20773)
+sens1 <- 20657/sum(72,20657)
+sens2 <- 20650/sum(67,20650)
+sens3 <- 20708/sum(84,20708)
 sens4 <- 20716/sum(94,20716)
-sens5 <- 20631/sum(76,20631)
-sens6 <- 20676/sum(73,20676)
-sens7 <- 20738/sum(82,20738)
-sens8 <- 20688/sum(75,20688)
-sens9 <- 20694/sum(59,20694)
-sens10 <- 20733/sum(76,20733)
+sens5 <- 20805/sum(62,20805)
+sens6 <- 20707/sum(64,20707)
+sens7 <- 20725/sum(75,20725)
+sens8 <- 20772/sum(85,20772)
+sens9 <- 20631/sum(85,20631)
+sens10 <- 20656/sum(79,20656)
 sens.cv <- mean(sens1, sens2, sens3, sens4, sens5, sens6, sens7, sens8, sens9, sens10)
+```
+
+#10-k Fold Cross-Validated Sensitivity
+```{r}
 sens.cv
 ```
+
 ```{r}
-classErr1 <- sum(81, 318)/25298
-classErr2 <- sum(67, 330)/25297
-classErr3 <- sum(63, 306)/25297
-classErr4 <- sum(94, 315)/25297
-classErr5 <- sum(76, 329)/25297
-classErr6 <- sum(73, 325)/25297
-classErr7 <- sum(82, 342)/25297
-classErr8 <- sum(75, 315)/25297
-classErr9 <- sum(59, 321)/25297
-classErr10 <- sum(76, 297)/25297
-mean(classErr1, classErr2, classErr3, classErr4, classErr5, classErr6, classErr7, classErr8, classErr9, classErr10)
+classErr1 <- sum(72, 282)/25298
+classErr2 <- sum(67, 313)/25297
+classErr3 <- sum(84, 308)/25297
+classErr4 <- sum(67, 362)/25297
+classErr5 <- sum(62, 306)/25297
+classErr6 <- sum(64, 319)/25297
+classErr7 <- sum(75, 306)/25297
+classErr8 <- sum(85, 336)/25297
+classErr9 <- sum(85, 348)/25297
+classErr10 <- sum(79, 327)/25297
+classErr.cv <- mean(classErr1, classErr2, classErr3, classErr4, classErr5, classErr6, classErr7, classErr8, classErr9, classErr10)
 ```
 
+#10-k Fold Cross-Validated Classification Error
+```{r}
+classErr.cv
+```
 
+K-fold cross validation (k = 10) results in a specificity of 94%, a sensitivity of 99.6%, and an overall classification error of 1.4% for the proposed logistic regression model.
